Updated buttons on about me page

--- a/templates/simon.html
+++ b/templates/simon.html
@@ -12,10 +12,12 @@
     p {
         margin-left: 250px;
     }
+
     img {
         margin-left: 250px;
     }
-    .mee{
+
+    .SimonsPage{
         position: relative;
         left: 52%;
         font-size: 30px;
@@ -43,7 +45,7 @@
 
 <br>
 
-<h1 class="mee"> Simon's Page</h1>
+<h1 class="SimonsPage"> Simon's Page</h1>
 
 <div style="text-align:center" class="aboutme">
     <p> Hello welcome to Simon Brunzell's about us Page, this is a page about the greatest thing ever... me!</p>
@@ -67,8 +69,7 @@
 <p id="GFG_UP" style="font-size: 1px; color:#64483f">
 </p>
 
-<p id = "GFG_DOWN" style =
-        "font-size: 24px; color:#fed2b9;border-style: outset;width:500px;position: relative;
+<p id = "GFG_DOWN" style ="font-size: 24px; color:#fed2b9;border-style: outset;width:500px;position: relative;
         left: 25%;">
 </p>
 
@@ -76,10 +77,7 @@
 <!--Button-->
 <div style="position: relative;
         left: 50%">
-<button class="btn" id="button" onclick="GFG_Fun()">
-    click for a fun fact
-
-</button>
+<button class="btn" id="button" onclick="GFG_Fun()">click for a fun fact </button>
 </div>
 
 
@@ -104,7 +102,7 @@
 </script>
 
 
-<!--Question-->
+<!--Proof of Perfection-->
 <p style="position:relative;left:64%">How perfect is Simon?</p>
 
 <input style="position:relative;left:82%" id="id1" type="number" min="100" max="100" required>
@@ -124,7 +122,7 @@
         }
     }
 </script>
-
+<!------------------------------------------------------------------------------------------->
 
 
 <br>
@@ -132,9 +130,7 @@
 <!-- Notepad link to notes-->
 <a href="https://docs.google.com/document/d/14MmFHefrfgQY180T0y2Cm4jv_q2mBz3U1obzI0VOSqc/
 edit?usp=sharing" style="text-align:center">
-
     <img style="width:100px;height:100px" src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/71/Notepad_icon.svg/2048px-Notepad_icon.svg.png">
-
 </a>
 
 <!--This is my picture-->
