Updated buttons on about me page

--- a/templates/simon.html
+++ b/templates/simon.html
@@ -47,6 +47,8 @@
 
 <h1 class="SimonsPage"> Simon's Page</h1>
 
+<br>
+
 <div style="text-align:center" class="aboutme">
     <p> Hello welcome to Simon Brunzell's about us Page, this is a page about the greatest thing ever... me!</p>
     <p>Some fun facts about me include...</p>
@@ -57,10 +59,11 @@
         and my younger sister Josephine</p>
     <p>Well now that you know you many fun things about me you should feel alot better,
         But if not, idk how you wouldn't, but if you don't some how...</p>
-    <p> go to study you're probably stressed because of that test/quiz/something you have coming up so go to (insert website name here) </p>
+    <p> go to study you're probably stressed because of that test/quiz/something you have
+        coming up so go to (insert website name here) </p>
     <p> and work for that grade you deserve. (insert website name here) </p>
-    <p> is an amazing website full of study
-        resources it's also made by some really cool people, including me! ;) </p>
+    <p> is an amazing website full of study resources it's also made by some really cool people,
+        including me! ;) </p>
 </div>
 
 <br>
