Updated navbar color scheme

--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -128,18 +128,27 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
             z-index: 0;
         }
 
+
+        A:link {text-decoration:none;color:#8E6F64FF}
+        A:visited {text-decoration:none;color:#8E6F64FF}
+        A:active {text-decoration:none;color:#8E6F64FF}
+        A:hover {text-decoration:none;color:#fed2b9}
+
     </style>
 
     <title>{{ basename }} | {{ project }} </title>
+
+
     <div class="sidenav">
         <p>this is working :D</p>
-        <a href="/leah">leah</a>
         <br>
-        <a href="/evan">evan</a>
+        <a href="/leah">Leah</a>
         <br>
-        <a href="/simon">simon</a>
+        <a href="/evan">Evan</a>
         <br>
-        <a href="/sanjay">sanjay</a>
+        <a href="/simon">Simon</a>
+        <br>
+        <a href="/sanjay">Sanjay</a>
     </div>
 
 </head>
