Updated navbar color scheme

--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -139,16 +139,15 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
     <title>{{ basename }} | {{ project }} </title>
 
 
-    <div class="sidenav">
+    <div class="sidenav" style="margin-top:10px">
         <p>this is working :D</p>
+        <a href="/leah" style="margin-left:16px">-Leah</a>
         <br>
-        <a href="/leah">Leah</a>
+        <a href="/evan" style="margin-left:16px">-Evan</a>
         <br>
-        <a href="/evan">Evan</a>
+        <a href="/simon" style="margin-left:16px">-Simon</a>
         <br>
-        <a href="/simon">Simon</a>
-        <br>
-        <a href="/sanjay">Sanjay</a>
+        <a href="/sanjay" style="margin-left:16px">-Sanjay</a>
     </div>
 
 </head>
