--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -126,6 +126,7 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
             overflow-x: hidden;
             padding-top: 20px;
             z-index: 0;
+            font-size:18px;
         }
 
 
