--- a/templates/simon.html
+++ b/templates/simon.html
@@ -1,4 +1,4 @@
-<<!-- Extending the predefined project layout -->
+<!-- Extending the predefined project layout -->
 {% extends "layouts/base.html" %}
 
 <!- This variable sets name of browser tab  -->
