--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -87,12 +87,12 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
             display: inline-block;
             border-radius: 25px;
             transition: all .2s;
-            color: #fed2b9;
-            border: 2px solid #fed2b9
+            color: #64483f;
+            border: 2px solid #64483f
         }
 
         .btn:hover {
-            background-color: #fed2b9;
+            background-color: #64483f;
             box-shadow: 0 20px 40px rgba(255, 255, 255, 0.2);
         }
 
@@ -100,7 +100,7 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
             transform: translateY(-1px);
             box-shadow: 0 5px 10px rgba(255, 255, 255, 0.2);
         }
-        /*.button {
+        .button {
             padding: .5em 2em;
             border-radius: 20px;
             background-color: transparent;
@@ -112,7 +112,7 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
         }
         .button:hover {
             background-color: #fed2b9
-            color: #64483f*/
+            color: #64483f
         }
         .row{
             margin: auto;
@@ -126,29 +126,20 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
             overflow-x: hidden;
             padding-top: 20px;
             z-index: 0;
-            font-size:18px;
         }
-
-
-        A:link {text-decoration:none;color:#8E6F64FF}
-        A:visited {text-decoration:none;color:#8E6F64FF}
-        A:active {text-decoration:none;color:#8E6F64FF}
-        A:hover {text-decoration:none;color:#fed2b9}
 
     </style>
 
     <title>{{ basename }} | {{ project }} </title>
-
-
-    <div class="sidenav" style="margin-top:10px">
+    <div class="sidenav">
         <p>this is working :D</p>
-        <a href="/leah" style="margin-left:16px">-Leah</a>
+        <a href="/leah">leah</a>
         <br>
-        <a href="/evan" style="margin-left:16px">-Evan</a>
+        <a href="/evan">evan</a>
         <br>
-        <a href="/simon" style="margin-left:16px">-Simon</a>
+        <a href="/simon">simon</a>
         <br>
-        <a href="/sanjay" style="margin-left:16px">-Sanjay</a>
+        <a href="/sanjay">sanjay</a>
     </div>
 
 </head>
@@ -164,7 +155,6 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
         <div class="col-2" style="text-align: right;">
             {% block info %}
                 <!-- notice jinja style variables used in href's -->
-                <!-- notice jinja style variables used in href's --->
                 <a><h5>{{basename}}</h5></a>
                 <a href={{github}} target="_blank"><i class="fa fa-github"></i></a>
                 <a href={{youtube}} target="_blank"><i class="fa fa-youtube-play"></i></a>
