--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -87,12 +87,12 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
             display: inline-block;
             border-radius: 25px;
             transition: all .2s;
-            color: #64483f;
-            border: 2px solid #64483f
+            color: #fed2b9;
+            border: 2px solid #fed2b9
         }
 
         .btn:hover {
-            background-color: #64483f;
+            background-color: #fed2b9;
             box-shadow: 0 20px 40px rgba(255, 255, 255, 0.2);
         }
 
