--- a/templates/brian.html
+++ b/templates/brian.html
@@ -11,13 +11,7 @@
 </style>
     <h1><center>Brian Tang Home Page</center></h1>
     <body style="background-color:cornflowerblue;">
-    <p align="center">
-        <iframe
-                width="1000"
-                height="500"
-                src="https://docs.google.com/document/d/1v4dmPa2CQaX8GSf0YmcSUG9yk1GqDXRRTICu1DzH1yA/edit?usp=sharing"
-        ></iframe>
-        <div>
+    <p>
         <button onclick="MaskOnOff()" class="center">Mask On/Off</button>
         <style>
             .center {
@@ -26,7 +20,7 @@
                 margin-right: auto;
             }
         </style>
-        </div>
+        </p>
     <div>
         <img id="MaskOn" src="../static/IMG_19F786F8D399-1.jpeg" style="max-height: 500px;" class="center">
         <style>
@@ -37,6 +31,18 @@
             }
         </style>
     </div>
+    <h1><center>Journal</center></h1>
+    <iframe class="center"
+            width="1000"
+            height="500"
+            src="https://docs.google.com/document/d/1v4dmPa2CQaX8GSf0YmcSUG9yk1GqDXRRTICu1DzH1yA/edit?usp=sharing">
+        <style>
+            .center {
+                display: block;
+                margin-left: auto;
+                margin-right: auto;}
+        </style>
+    </iframe>
     </p>
 
 <script>
