Individual Page Background

--- a/templates/individualHomepage/linda.html
+++ b/templates/individualHomepage/linda.html
@@ -19,6 +19,16 @@
         }
     </style>
 
+    <div id="video_wrapper">
+    <video autoplay muted loop>
+        <source src="https://drive.google.com/uc?export=view&id=1yWXLFO320yVEiGrRJxm_hkEojwD2AVgr" type="video/mp4">
+    </video>
+
+
+    <div id="wrapper">
+        <audio loop controls autoplay>
+            <source src="/static/rain.mp3" type="audio/mpeg">
+        </audio>
     <div style="margin: 2% 5% 5%; text-align:center; font-family: Baskerville; font-size: larger">
         <div>
 
