--- a/templates/individualHomepage/linda.html
+++ b/templates/individualHomepage/linda.html
@@ -32,6 +32,7 @@
     <div style="margin: 2% 5% 5%; text-align:center; font-family: Baskerville; font-size: larger">
         <div>
 
+            <h1>Linda Liu Individual Homepage</h1>
             <p>Hello <span id="myName">{{name}}</span>, welcome to my individual page!</p>
 
             <form action="#" id="linda" method="POST" >
@@ -50,9 +51,12 @@
             <script> //from Shreya
             function changeImage() {
 
-                if (document.getElementById("imgClickAndChange").src ="/static/assets/lindaWithMask.jpg")
+                if (document.getElementById("imgClickAndChange").src.includes('lindaWithMask'))
                 {
                     document.getElementById("imgClickAndChange").src = "/static/assets/lindaWithoutMask.jpg";
+                }
+                else{
+                    document.getElementById("imgClickAndChange").src ="/static/assets/lindaWithMask.jpg"
                 }
             }
             </script>
