colin.html styling change

--- a/templates/colin.html
+++ b/templates/colin.html
@@ -33,8 +33,8 @@
                     </div>
                 </td>
                 <td>
-                    <p class="fs-2">
-                        My name is Colin Howard, and I'm a junior in Ms.Naidu's CSP period 5. I don't have any experience
+                    <p style="text-align:center" class="fs-2">
+                        My name is Colin Howard, and I'm a junior in Ms. Naidu's CSP period 5. I don't have any experience
                         in computer science or coding of any time, so learning new things in this class is lots of fun.
                         Sometimes it's hard to keep up, but thankfully, Google almost always has the answers to my questions.
                         I'm excited to continue to learn how to code this trimester and to work with my new group.
