image with face

--- a/templates/adi.html
+++ b/templates/adi.html
@@ -10,7 +10,7 @@
     <script>
         imagenumber=0;
         function toggle() {
-            const images = ["https://i.natgeofe.com/n/1e38ab75-6d81-45e9-817c-3181a146165e/01pandainsemination_2x1.jpg",
+            const images = ["winnin.jpg",
                 "https://www.powayusd.com/PUSD/media/DNHS/images/slider/Hi-Res-School-Photo-min.jpg?ext=.jpg"
             ];
             if (imagenumber == 0) {
