--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -7,10 +7,7 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
 <!DOCTYPE HTML>
 <html lang="en">
 
-{% set basename = "Supporting Cast" %}
-{% set github = "https://github.com/RohanG326/supporting_cast" %}
-{% set twitter = "https://twitter.com/NighthawkCoding" %}
-{% set youtube = "https://www.youtube.com/channel/UClIKOsDS5dsfzFA3zveDT3Q?view_as=subscriber" %}
+
 
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -99,6 +96,8 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
     </style>
 
     <title>{{ basename }} | {{ project }} </title>
+    {% block head%}
+    {% endblock %}
 
 </head>
 
@@ -128,17 +127,7 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
 
         </div>
 
-        <div class="row" style="padding-left: 10%;">
-            {% block links %}
-            <div class="col-3">
-                <a href="{{ overview }}" class="btn">Overview</a>
-            </div>
 
-            <div class="col-3">
-                <a href="{{ repo }}" class="btn">Repository</a>
-            </div>
-            {% endblock %}
-        </div>
 
     </div>
 </div>
@@ -147,20 +136,7 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
 </body>
 
 {% block background %}
-    <script src="{{ url_for('static', filename='three.r119.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='vanta.birds.min.js') }}"></script>
-    <script>
-        VANTA.BIRDS({
-            el: "body",
-            mouseControls: true,
-            touchControls: true,
-            gyroControls: false,
-            minHeight: 200.00,
-            minWidth: 200.00,
-            scale: 1.00,
-            scaleMobile: 1.00
-        })
-    </script>
+
 {% endblock %}
 
 </html>
