--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -40,7 +40,25 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
             color: var(--white);
             background-color: var(--bg);
             color: var(--txt);
+            background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+            background-size: 400% 400%;
+            animation: gradient 15s ease infinite;
+  }
+
+  @keyframes gradient {
+      0% {
+          background-position: 0% 50%;
+      }
+      50% {
+          background-position: 100% 50%;
+      }
+      100% {
+          background-position: 0% 50%;
+      }
+  }
         }
+
+
 
         .dark-mode {
             background-color: var(--white);
