--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -110,7 +110,9 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
         }
 
         .btn:hover {
+            color: #8e6f64;
             background-color: #fed2b9;
+            font-weight: 700;
             box-shadow: 0 20px 40px rgba(255, 255, 255, 0.2);
         }
 
@@ -147,9 +149,9 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
         }
 
 
-        A:link {text-decoration:none;color:#8E6F64FF}
-        A:visited {text-decoration:none;color:#8E6F64FF}
-        A:active {text-decoration:none;color:#8E6F64FF}
+        A:link {text-decoration:none;color:#000}
+        A:visited {text-decoration:none;color:#000}
+        A:active {text-decoration:none;color:#000}
         A:hover {text-decoration:none;color:#fed2b9}
 
     </style>
