colin.html added link and styling

--- a/templates/colin.html
+++ b/templates/colin.html
@@ -43,6 +43,19 @@
             </tr>
             </tbody>
 
+            <tfoot>
+            <tr>
+                <th colspan="2">
+                    <a style="text-decoration-color: rebeccapurple" href="https://docs.google.com/document/
+                    d/1iU4SOdLDTyFTuoI4yuBxjvRjvVHq53I5JZgaCRP8Ah4/
+                    edit?usp=sharing">
+                        <p style="text-align:center; color:rebeccapurple;" class="fs-2" >
+                        Colin, Chase and Pranav Journal</p>
+                    </a>
+                </th>
+            </tr>
+            </tfoot>
+
         </table>
     </div>
 
