--- a/templates/IanAboutMe.html
+++ b/templates/IanAboutMe.html
@@ -2,9 +2,39 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>About Us: Ian</title>
+    <title>About me: Ian</title>
 </head>
 <body>
 
 </body>
+</html>
+<header class='masthead'>
+  <p class='masthead-intro'>Hi I'm</p>
+  <h1 class='masthead-heading'>Ian!</h1>
+</header>
+<section class="introduction-section">
+    <h1>INTRODUCTION</h1>
+    <p>I'm a sophmore here at Del Norte Highschool, I'm intrigued with the field of computer science because it is something that gives me big challenges that I am able to overcome and expand my knowledge</p>
+    <p>I love the internet, technology, and working with others.</p>
+</section>
+<section class="location-section">
+    <h1>WHERE I'M FROM</h1>
+    <p>I'm from here in San Diego California </p>
+</section>
+<section class="questions-section">
+    <h2>MORE ABOUT ME</h2>
+    <p>I like playing games and talking to my friends, I like to do apcsp because it's challeneging but "fun".</p>
+<footer class="content-footer">
+    <p>EXTRAS:</p>
+    <ul class="social">
+        <li><a class="css-is-deranged" href="https://github.com/IanHua14">GitHub</a></li>
+  
+</footer>
+    
+    <html>
+   <head>
+      <title>HTML Backgorund Color</title>
+   </head>
+   <body style="background-color:beige;">
+   </body>
 </html>
