--- a/templates/IanAboutMe.html
+++ b/templates/IanAboutMe.html
@@ -28,6 +28,7 @@
     <p>EXTRAS:</p>
     <ul class="social">
         <li><a class="css-is-deranged" href="https://github.com/IanHua14">GitHub</a></li>
+        <li><a class="css-is-deranged" href="https://www.instagram.com/auhnai_15/">Instagram</a></li>
   
 </footer>
     
@@ -38,3 +39,4 @@
    <body style="background-color:beige;">
    </body>
 </html>
+
