--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -13,9 +13,10 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
             <a class="nav-link" href={{ url_for('kangaroos') }}>Kangaroos</a>
             <a class="nav-link" href={{ url_for('walruses') }}>Walruses</a>
             <a class="nav-link" href={{ url_for('hawkers') }}>Hawkers</a>
+            <a class="nav-link" href={{ url_for('linda') }}>Linda</a>
             <a class="nav-link" href={{ url_for('alice') }}>Alice</a>
-            <!-- stub is shown using the name of the route -->
-            <a class="nav-link" href="/stub">Stub</a>
+            <a class="nav-link" href={{ url_for('saathvika') }}>Saathvika</a>
+            <a class="nav-link" href={{ url_for('samaya') }}>Samaya</a>
         </div>
     </div>
 </nav>
