extended project layout to alice individual page

--- a/templates/alice.html
+++ b/templates/alice.html
@@ -1,5 +1,5 @@
 {% extends "layouts/project.html" %}
-
+{% block body %}
 <!DOCTYPE html>
 
 <h1 id="abt_name"> Alice Tang Individual Homepage</h1>
@@ -44,3 +44,5 @@ document.getElementById("imgClickAndChange").src ="/static/assets/alicewithmask.
 </script>
 
 <p>Click Me!</p>
+
+{% endblock %}
