--- a/templates/linda.html
+++ b/templates/linda.html
@@ -1,6 +1,6 @@
 {% extends "layouts/project.html" %}
 {% block body %}
-
+    <!DOCTYPE html>
 
 <link rel="stylesheet" type="text/css" href="/static/css/video_style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
