--- a/templates/alice.html
+++ b/templates/alice.html
@@ -5,7 +5,8 @@
 <h1 id="abt_name"> Alice Tang Individual Homepage</h1>
 <style>
     body{
-        background: #8c8cb8;
+        background: #8c8cb8 url('/static/assets/saathvikaBG.jpg') no-repeat fixed;
+        background-size: cover;
     }
 
     #abt_name {
