--- a/templates/saathvika.html
+++ b/templates/saathvika.html
@@ -21,7 +21,7 @@
 <body style="background-image: url('/static/assets/saathvikaBG.jpg'); background-repeat: no-repeat; background-attachment: fixed; background-size: cover;">
 <div style="margin: 2% 5% 5%; text-align:center; font-family: monospace; font-size: larger" >
     <div>
-        <h1 style="background-color: rosybrown; font-family: monospace">Saathvika Ajith's Individual Homepage</h1>
+        <h1 style="background-color: rosybrown; font-family: 'Blippo'; font-size: 65px; text-align: center; padding: 15px; color: papayawhip; text-shadow: 5px 3px black;">Saathvika Ajith's Individual Homepage</h1>
         <p style="background-color: rosybrown">Hello there <span id="myName">{{name}}</span>, welcome to my individual homepage!</p>
         <form action="/saathvika/" id="saathvika2" method="POST" >
             <label for="name">Enter Your Name!</label>
