--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -14,6 +14,8 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
             <a class="nav-link" href={{ url_for('alice') }}>Alice</a>
             <a class="nav-link" href={{ url_for('saathvika') }}>Saathvika</a>
             <a class="nav-link" href={{ url_for('samaya') }}>Samaya</a>
+            <a class="nav-link" href={{ url_for('pranavi') }}>Pranavi</a>
+
         </div>
     </div>
 </nav>
