--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -33,6 +33,7 @@
                     <a class="dropdown-item" href="{{ url_for('tanay') }}">Tanay</a>
                     <a class="dropdown-item" href="{{ url_for('colin')}}">Colin</a>
                     <a class="dropdown-item" href="{{ url_for('pranav')}}">Pranav</a>
+                    <a class="dropdown-item" href="{{ url_for('chase')}}">Chase</a>
                 </div>
             </li>
 
