--- a/templates/connor.html
+++ b/templates/connor.html
@@ -15,11 +15,22 @@
         .src="/static/assets/nomaskconnor.jpg";
     }
 </script>
+    <style>
+        * {
+            box-sizing: border-box;
+        }
+
+        .image {
+            padding: 50px;
+            text-align: center;
+            background-color:forestgreen;
+        }
+    </style>
 {%endblock%}
 {% block body %}
 
 <h1 class="text-center">Connor Home Page</h1>
-<div class="container">
+<div class="image">
     <div class="row justify-content-md-center">
         <table class="table">
             <thead>
@@ -30,7 +41,7 @@
             <tbody>
             <tr>
                 <td>
-                    <img id="place" class="img-responsive py-3" alt="" width="256" src="/static/assets/connormask.jpg" >
+                    <img id="place" class="img-responsive py-3" alt="" width="400" src="/static/assets/connormask.jpg" >
                     <div>
                         <button onclick="mask()">Mask</button>
                         <button onclick="nomask()">No Mask</button>
@@ -38,5 +49,8 @@
                 </td>
             </tr>
             </tbody>
+        </table>
+    </div>
+</div>
 {% endblock %}
 </html>
